--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,17 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.3'
+	implementation group: 'io.github.openfeign', name: 'feign-okhttp', version: '11.8'
+	implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '11.8'
+	implementation group: 'io.github.openfeign', name: 'feign-core', version: '11.8'
+	implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.8'
+
 }
 
 dependencyManagement {
